@@ -31,6 +31,7 @@
 #define IDB_BOOKMARKS                   145
 #define IDC_CURSOR_HAND                 146
 #define IDD_UPDATE                      147
+#define IDD_GOTO_PAGE                   148
 #define IDC_COMBO_PRINTER               1000
 #define IDC_COMBO_PAPER                 1001
 #define IDC_PRINT_TO_FILE               1002
@@ -82,6 +83,8 @@
 #define IDC_CONTRAST_TEXT               1048
 #define IDC_GAMMA_TEXT                  1049
 #define IDC_SEARCH_STATUS               1050
+#define IDC_PAGE                        1051
+#define IDC_PAGE_COUNT                  1052
 #define ID_VIEW_NEXTPAGE                32771
 #define ID_VIEW_PREVIOUSPAGE            32772
 #define ID_ZOOM_50                      32777
@@ -139,14 +142,15 @@
 #define ID_DISPLAY_BACKGROUND           32856
 #define ID_DISPLAY_FOREGROUND           32857
 #define ID_VIEW_FULLSCREEN              32858
+#define ID_VIEW_GOTO_PAGE               32859
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        148
-#define _APS_NEXT_COMMAND_VALUE         32868
-#define _APS_NEXT_CONTROL_VALUE         1051
+#define _APS_NEXT_COMMAND_VALUE         32860
+#define _APS_NEXT_CONTROL_VALUE         1053
 #define _APS_NEXT_SYMED_VALUE           109
 #endif
 #endif
