@@ -5,6 +5,8 @@ Copyright (C) 2004-2005 Andrew Zhezherun
 Changes in version 0.3.4:
 * Fixed crash when using Search Results.
 * Fixed wrong page bounds calculation in single page layout.
+* Fixed text searching in single page layout.
++ Added "Go To Page" dialog.
 + WinDjView can now be compiled with VC6.0.
 
 Changes in version 0.3.3:
